; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c___conn_init_store.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c___conn_init_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_cluster_bucket = type { i32 }

@tcp_buffers = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__conn_init_store(%struct.rpc_cluster_bucket* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.rpc_cluster_bucket*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.rpc_cluster_bucket* %0, %struct.rpc_cluster_bucket** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i32 @assert(i8* %7)
  %9 = load i32, i32* @tcp_buffers, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @tl_store_init(i8* %12, i64 %13)
  br label %19

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @tl_store_init_tcp_raw_msg(i8* %16, i64 %17)
  br label %19

19:                                               ; preds = %15, %11
  ret void
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @tl_store_init(i8*, i64) #1

declare dso_local i32 @tl_store_init_tcp_raw_msg(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
